docs: update breaking changes doc

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -15,3 +15,25 @@ For a slightly more elaborate setup, [@babel/preset-env](https://babeljs.io/docs
 From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
+
+### Typescript usage of withTheme
+
+The typings for `withTheme` have been updated to more accurately reflect it's nature as a factory function that returns a `Form` component and to properly type the ref forwarded to this component. See more about [the changes here](https://github.com/rjsf-team/react-jsonschema-form/pull/2279)
+
+If you're currently using `withTheme`, the typing for the formData was always 'any', as the generated Form component was not able to accept a generic argument.  
+
+In v3.x these typings will properly infer formData if no type is given, or validate it if one is, similar to how the exported Form from core would work.  
+
+You can maintain the old behavior of `withTheme`, if necessary by changing usage of your ThemedForm to override the generic for formData with any.
+
+```tsx 
+const schema = { ... }
+const ThemedForm = withTheme({ ... })
+const formData = { ... }
+
+// change this
+<ThemedForm schema={schema} formData={formData} />
+
+// to this to override the formData type with any and maintain the v2 behavior
+<ThemedForm<any> schema={schema} formData={formData} />
+```
