--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -18,13 +18,13 @@ From `@babel/preset-env`'s docs
 
 ### Typescript usage of withTheme
 
-The typings for `withTheme` have been updated to more accurately reflect it's nature as a factory function that returns a `Form` component and to properly type the ref forwarded to this component. See more about [the changes here](https://github.com/rjsf-team/react-jsonschema-form/pull/2279)
+The typings for `withTheme` have been updated to more accurately reflect its nature as a factory function that returns a `Form` component and to properly type the ref forwarded to this component. See more about [the changes here](https://github.com/rjsf-team/react-jsonschema-form/pull/2279)
 
-If you're currently using `withTheme`, the typing for the formData was always 'any', as the generated Form component was not able to accept a generic argument.  
+If you're currently using `withTheme`, the typing for the formData was always `any`, as the generated Form component was not able to accept a generic argument.
 
-In v3.x these typings will properly infer formData if no type is given, or validate it if one is, similar to how the exported Form from core would work.  
+In v3.x these typings will properly infer formData if no type is given, or validate it if one is, similar to how the exported Form from core would work.
 
-You can maintain the old behavior of `withTheme`, if necessary by changing usage of your ThemedForm to override the generic for formData with any.
+You can maintain the old behavior of `withTheme`, if necessary, by changing usage of your ThemedForm to override the generic for formData with `any`.
 
 ```tsx 
 const schema = { ... }
