--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -15,3 +15,9 @@ For a slightly more elaborate setup, [@babel/preset-env](https://babeljs.io/docs
 From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
+
+## noHtml5Validate now defaults to true
+
+In v3.x, `noHtml5Validate` defaults to true. Seem more about [this change here](https://github.com/rjsf-team/react-jsonschema-form/issues/1184).
+
+If you were previously using HTML5 validatins, and want to continue doing so, you can reenable that behavior by setting the prop `noHtml5Validate=false` on your `Form` elements. 
