Added upgrade note

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -15,3 +15,11 @@ For a slightly more elaborate setup, [@babel/preset-env](https://babeljs.io/docs
 From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
+
+### Dereferenced schemas for `anyOf`/`allOf` options
+
+`options` prop for `MultiSchemaField` has been changed slightly.
+
+Before an option could include a `$ref`.
+
+Now any option with a reference will be resolved/dereferenced when given as props for `MultiSchemaField`.
