feat: disable html5 validations by default
By default, displaying html 5 validations on forms provides a much more
intuitive user experience and ensures a standardized method for
generating and displaying form validation errors

fixes #1184
BREAKING_CHANGE

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -16,8 +16,8 @@ From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
 
-## noHtml5Validate now defaults to true
+## html5Validate now defaults to false
 
-In v3.x, `noHtml5Validate` defaults to true. Seem more about [this change here](https://github.com/rjsf-team/react-jsonschema-form/issues/1184).
+In v3.x, `html5Validate` defaults to false. Seem more about [this change here](https://github.com/rjsf-team/react-jsonschema-form/issues/1184).
 
-If you were previously using HTML5 validatins, and want to continue doing so, you can reenable that behavior by setting the prop `noHtml5Validate=false` on your `Form` elements. 
+If you were previously using HTML5 validations, and want to continue doing so, you can reenable that behavior by setting the prop `html5Validate=true` on your `Form` elements. 
