feat: remove deprecations from v2 and prior

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -15,3 +15,33 @@ For a slightly more elaborate setup, [@babel/preset-env](https://babeljs.io/docs
 From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
+
+### ui:widget object api has been removed
+
+Since v0.41.0, the `ui:widget` object API, where a widget and options were specified with `"ui:widget": {component, options}` shape, was deprecated. It has been removed in v3.x
+
+To maintain similar behavior, instead set the component to the `"uid:widget"` and pass options in `"ui:options"`.
+
+```jsx
+// before
+uiSchema = {
+    "ui:widget": {
+        component: SomeComponent, // or a string component type "SomeComponent"
+        options: {}
+    }
+}
+
+// v3.x
+uiSchema = {
+    "ui:widget": SomeComponent, // or a string component type "SomeComponent"
+    "ui:options": {}
+}
+```
+
+### autocomplete prop on form has been replaced with autoComplete
+
+In previous versions a deprecation warning was shown for `autocomplete`. In v3.x the `autocomplete` prop has been removed entirely, in favor of the `autoComplete` prop.
+
+### Registry no longer has a definitions key
+
+In version 2 this was deprecated, in favor of reading the definitions from the rootSchema which is also part of the registry. In version 3 this field has been removed. If your custom field requires reading the definitions key, you can do so by accessing it via registry.rootSchema.definitions.
