tests: fix tests and update docs

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -23,3 +23,45 @@ From `@babel/preset-env`'s docs
 Before an option could include a `$ref`.
 
 Now any option with a reference will be resolved/dereferenced when given as props for `MultiSchemaField`.
+
+### Generate correct ids when arrays are combined with `anyOf`/`oneOf`
+
+Previously when you have arrays inside `anyOf` or `oneOf`, the parent isn't
+used to generate ids. For example, given a schema such as
+
+```
+{
+  type: "object",
+  properties: {
+    items: {
+      type: "array",
+      items: {
+        type: "object",
+        anyOf: [
+          {
+            properties: {
+              foo: {
+                type: "string",
+              },
+            },
+          },
+          {
+            properties: {
+              bar: {
+                type: "string",
+              },
+            },
+          },
+        ],
+      },
+    },
+  },
+}
+```
+
+We would get fields with id `root_foo` and `root_bar`. As you can imagine, we
+can end up with duplicated ids if there's actually a `foo` or a `bar` in the
+root of the schema.
+
+From V3, the child fields will correctly use the parent id when generating
+it's own id. Such as `root_items_0_foo`.
