Update 3.x upgrade guide.md

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -26,29 +26,29 @@ Now any option with a reference will be resolved/dereferenced when given as prop
 
 ### Generate correct ids when arrays are combined with `anyOf`/`oneOf`
 
-Previously when you have arrays inside `anyOf` or `oneOf`, the parent isn't
-used to generate ids. For example, given a schema such as
+In v2, with arrays inside `anyOf` or `oneOf`, the parent name
+was not used to generate ids. For example, given a schema such as
 
-```
+```json
 {
-  type: "object",
-  properties: {
-    items: {
-      type: "array",
-      items: {
-        type: "object",
-        anyOf: [
+  "type": "object",
+  "properties": {
+    "items": {
+      "type": "array",
+      "items": {
+        "type": "object",
+        "anyOf": [
           {
-            properties: {
-              foo: {
-                type: "string",
+            "properties": {
+              "foo": {
+                "type": "string",
               },
             },
           },
           {
-            properties: {
-              bar: {
-                type: "string",
+            "properties": {
+              "bar": {
+                "type": "string",
               },
             },
           },
@@ -60,8 +60,8 @@ used to generate ids. For example, given a schema such as
 ```
 
 We would get fields with id `root_foo` and `root_bar`. As you can imagine, we
-can end up with duplicated ids if there's actually a `foo` or a `bar` in the
+could end up with duplicated ids if there's actually a `foo` or a `bar` in the
 root of the schema.
 
-From V3, the child fields will correctly use the parent id when generating
-it's own id. Such as `root_items_0_foo`.
+From v3, the child fields will correctly use the parent id when generating
+its own id. Such as `root_items_0_foo`.
