Update 3.x upgrade guide.md

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -64,4 +64,4 @@ could end up with duplicated ids if there's actually a `foo` or a `bar` in the
 root of the schema.
 
 From v3, the child fields will correctly use the parent id when generating
-its own id. Such as `root_items_0_foo`.
+its own id, generating ids such as `root_items_0_foo`.
