Update docs/3.x upgrade guide.md
Co-authored-by: Ashwin Ramaswami <aramaswamis@gmail.com>

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -18,6 +18,6 @@ From `@babel/preset-env`'s docs
 
 ## html5Validate now defaults to false
 
-In v3.x, `html5Validate` defaults to false. Seem more about [this change here](https://github.com/rjsf-team/react-jsonschema-form/issues/1184).
+In v3.x, the `noHTML5Validate` property has been removed and replaced with `html5Validate`, which has a default value of false. Seem more about [this change here](https://github.com/rjsf-team/react-jsonschema-form/issues/1184).
 
 If you were previously using HTML5 validations, and want to continue doing so, you can reenable that behavior by setting the prop `html5Validate=true` on your `Form` elements. 
