Update docs/3.x upgrade guide.md
Co-authored-by: Ashwin Ramaswami <aramaswamis@gmail.com>

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -16,7 +16,7 @@ From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
 
-## html5Validate now defaults to false
+## Forms do not enable HTML5 validation by default
 
 In v3.x, the `noHTML5Validate` property has been removed and replaced with `html5Validate`, which has a default value of false. Seem more about [this change here](https://github.com/rjsf-team/react-jsonschema-form/issues/1184).
 
