Switch to using active voice for section on allOf/anyOf dereferencing
https://github.com/rjsf-team/react-jsonschema-form/issues/2297\#issuecomment-866263746

--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -18,8 +18,4 @@ From `@babel/preset-env`'s docs
 
 ### Dereferenced schemas for `anyOf`/`allOf` options
 
-`options` prop for `MultiSchemaField` has been changed slightly.
-
-Before an option could include a `$ref`.
-
-Now any option with a reference will be resolved/dereferenced when given as props for `MultiSchemaField`.
+`MultiSchemaField`'s `options` interface is different. Before, an option could include a `$ref`. Now, any option with a reference will be resolved/dereferenced when given as props for `MultiSchemaField`.
