--- a/docs/3.x upgrade guide.md
+++ b/docs/3.x upgrade guide.md
@@ -1,6 +1,14 @@
 # 3.x Upgrade Guide
 
-## BREAKING
+## Breaking changes
+
+### Node support
+
+Dropped support for Node 8, 9, 10. Minimum supported version of Node.js is now 12.
+
+### Dereferenced schemas for `anyOf`/`allOf` options
+
+`MultiSchemaField`'s `options` interface is different. Before, an option could include a `$ref`. Now, any option with a reference will be resolved/dereferenced when given as props for `MultiSchemaField`.
 
 ### Bring your own polyfills
 
@@ -16,6 +24,3 @@ From `@babel/preset-env`'s docs
 
 > We leverage [`browserslist`, `compat-table`, and `electron-to-chromium`] to maintain mappings of which version of our supported target environments gained support of a JavaScript syntax or browser feature, as well as a mapping of those syntaxes and features to Babel transform plugins and core-js polyfills.
 
-### Dereferenced schemas for `anyOf`/`allOf` options
-
-`MultiSchemaField`'s `options` interface is different. Before, an option could include a `$ref`. Now, any option with a reference will be resolved/dereferenced when given as props for `MultiSchemaField`.
